# aulas-deeplearning

1 - reflection/: M2_UGL_1.ipynb  M2_UGL_2.ipynb
2 - tool use/: M3_UGL_1.ipynb  M3_UGL_2.ipynb
3 - evaluation/: M4_UGL_1.ipynb  utils.py
4 - planning/: M5_UGL_1_R.ipynb
AI-102/NLP/: 01_analyze_text.ipynb  02_qna.ipynb  03_languages.ipynb  04_text_classification.ipynb  05_custom_entity_recognition.ipynb  06_translator_sdk.ipynb  07_speech.ipynb  08_speech_translation.ipynb  09_audio_chat.ipynb
AI-102/Vision/: 01_analyze_images.ipynb  02_read_text.ipynb  03_face.ipynb  04_image_classification.ipynb  05_object-detection.ipynb  (+3 more)
Spacy/: pyproject.toml  requirements.txt
Spacy/agents/: code-reviewer.md  python-engineer.md
Spacy/spacy_intent/: __init__.py  engine.py  exceptions.py
Spacy/spacy_intent/application/: action_resolver.py  preprocessing.py  training_collector.py  use_cases.py
Spacy/spacy_intent/config/: intents.yml
Spacy/spacy_intent/domain/: entities.py  parsing.py  ports.py  registry.py  training.py
Spacy/spacy_intent/infrastructure/: config_loader.py  postgres_repository.py  spacy_classifier.py
Spacy/spacy_intent/infrastructure/migrations/: 001_create_training_records.sql
Spacy/spacy_intent/infrastructure/parsers/: command_style.py  pipe_delimited.py  space_separated.py
Spacy/tests/integration/: test_engine.py
Spacy/tests/unit/: test_action_resolver.py  test_config_loader.py  test_entities.py  test_parsers.py  test_preprocessing.py  test_training_collector.py  test_use_case.py
ai-organism/: .gitignore  requirements.txt  run_agent.sh
(+47 files in other folders)
